[tool.poetry]
name = "tornado-sample"
version = "1.0.0"
description = "tornado application sample"
authors = ["lx"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
