[tool.poetry]
name = "tornado-sample"
version = "1.0.0"
description = "tornado application sample"
authors = ["lx"]

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.1"
elastic-apm = "^6.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
